...
                break;
              case ThemeMode.system:
                icon = Icons.brightness_4;
                break;
            }
            return PopupMenuButton<ThemeMode>(
              key: const Key('locale_selector_theme'),
              tooltip: l.translate('change_theme'),
              icon: Icon(
                icon,
                color: iconColor ?? Theme.of(context).colorScheme.primary,
              ),
              onSelected: (m) => _saveTheme(m),
...
                      if (mode == ThemeMode.light) const SizedBox(width: 6),
                      Text(l.translate('light')),
                    ],
                  ),
                ),
                PopupMenuItem(
                  key: const Key('theme_item_dark'),
                  value: ThemeMode.dark,
                  child: Row(
                    children: [
                      if (mode == ThemeMode.dark) const Icon(Icons.check, size: 16),
                      if (mode == ThemeMode.dark) const SizedBox(width: 6),
                      Text(l.translate('dark')),
...
