...
          setStateLocal = setState;
          return AlertDialog(
            title: Text(buildTitle()),
            content: SizedBox(
              width: 400,
              child: TextField(
                key: const Key('edit_simple_field_input'),
                controller: ctrl,
                autofocus: true,
                maxLength: 40,
                onSubmitted: (_) => save(),
                decoration: InputDecoration(
                  labelText: buildTitle(),
...
              TextButton(
                key: const Key('edit_simple_field_cancel'),
                onPressed: () => Navigator.of(ctx).pop(),
                child: Text(l.translate('cancel')),
              ),
              ElevatedButton(
                key: const Key('edit_simple_field_save'),
                onPressed: save,
                child: Text(l.translate('save')),
              ),
            ],
          );
        },
...
