...
        const SizedBox(height: 40),
        SizedBox(
          width: isWideScreen ? 320 : double.infinity,
          child: Focus(
            child: TextField(
              controller: emailController,
              key: const Key('emailField'),
              decoration: InputDecoration(
                labelText: localizations.translate('email'),
                border: const OutlineInputBorder(),
                prefixIcon: const Icon(Icons.person),
                errorText: showEmailError ? localizations.translate('invalid_email') : null,
                isDense: false,
...
        const SizedBox(height: 20),
        SizedBox(
          width: isWideScreen ? 320 : double.infinity,
          child: TextField(
            controller: passwordController,
            obscureText: true,
            key: const Key('passwordField'),
            decoration: InputDecoration(
              labelText: localizations.translate('password'),
              border: const OutlineInputBorder(),
              prefixIcon: const Icon(Icons.lock),
              isDense: false,
              contentPadding: const EdgeInsets.symmetric(vertical: 18, horizontal: 16),
...
          animation: opacityAnimation,
          builder: (context, child) => Opacity(
            opacity: opacityAnimation.value,
            child: SizedBox(
              width: isWideScreen ? 320 : double.infinity,
              child: ElevatedButton(
                key: const Key('loginButton'),
                onPressed: isButtonEnabled ? loginWithEmailAndPassword : null,
                style: ElevatedButton.styleFrom(
                  minimumSize: const Size(double.infinity, 50),
                  backgroundColor: Theme.of(ctx).colorScheme.primary,
                  elevation: isButtonEnabled ? 4 : 0,
                ),
...
